test/corpus/backticks.txt
================================================================================
Backtick: Simple command unquoted
================================================================================

CMD=`whoami`

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (backtick_substitution))))

================================================================================
Backtick: Simple command in double quotes
================================================================================

CMD="`date`"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (backtick_substitution))))

================================================================================
Backtick: With text before in double quotes
================================================================================

MSG="Today is `date`"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (backtick_substitution))))

================================================================================
Backtick: With text after in double quotes
================================================================================

MSG="`whoami` is logged in"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (backtick_substitution)
      (double_quoted_content))))

================================================================================
Backtick: Multiple backticks in double quotes
================================================================================

MSG="`whoami`@`hostname`"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (backtick_substitution)
      (double_quoted_content)
      (backtick_substitution))))

================================================================================
Backtick: Mixed with dollar variable
================================================================================

MSG="User: $USER, Host: `hostname`"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (simple_variable)
      (double_quoted_content)
      (backtick_substitution))))

================================================================================
Backtick: With escaped content
================================================================================

CMD=`echo \"hello\"`

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (backtick_substitution))))

================================================================================
Backtick: Complex command
================================================================================

DATE=`date +%Y-%m-%d`

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (backtick_substitution))))

================================================================================
Backtick: With pipe inside
================================================================================

COUNT=`ls | wc -l`

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (backtick_substitution))))

================================================================================
Backtick: Empty backticks are literal
================================================================================

EMPTY=``

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (unquoted_content)
      (unquoted_content))))

================================================================================
Backtick: With text before unquoted
================================================================================

PATH=/usr/bin:`pwd`

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (unquoted_content)
      (backtick_substitution))))

================================================================================
Backtick: Single quotes preserve backticks literally
================================================================================

LITERAL='`not executed`'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Backtick: Export with backtick
================================================================================

export COMMIT=`git rev-parse HEAD`

--------------------------------------------------------------------------------

(source_file
  (pair
    (export_keyword)
    (key)
    (unquoted_value
      (backtick_substitution))))
