test/corpus/comments.txt
================================================================================
Comment: Simple line comment
================================================================================

# This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: Empty comment (just hash)
================================================================================

#

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: Multiple hash marks
================================================================================

### Section Header ###

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: With leading spaces
================================================================================

  # Indented comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: With leading tab
================================================================================

	# Tab-indented comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: Multiple comments consecutive
================================================================================

# First comment
# Second comment
# Third comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (comment
    (comment_content))
  (comment
    (comment_content)))

================================================================================
Comment: Between pairs
================================================================================

KEY1=value1
# Separator comment
KEY2=value2

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Comment: At start of file
================================================================================

# Header comment
KEY=value

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Comment: At end of file
================================================================================

KEY=value
# Footer comment

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (comment
    (comment_content)))

================================================================================
Comment: With special characters
================================================================================

# Special: !@#$%^&*()_+-=[]{}|;':",.<>?/

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: With URL
================================================================================

# See https://example.com for details

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: With equals sign
================================================================================

# KEY=value is not parsed

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment: Unicode content
================================================================================

# Hello 世界 🚀

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Inline comment: Basic
================================================================================

PORT=3000 # Server port

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment)))

================================================================================
Inline comment: Multiple spaces before hash
================================================================================

PORT=3000    # Multiple spaces

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment)))

================================================================================
Inline comment: Tab before hash
================================================================================

PORT=3000	# Tab before

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment)))

================================================================================
Inline comment: After double-quoted value
================================================================================

KEY="value" # Comment after quoted

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))
    (inline_comment)))

================================================================================
Inline comment: After single-quoted value
================================================================================

KEY='value' # Comment after single-quoted

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))
    (inline_comment)))

================================================================================
Inline comment: After empty value
================================================================================

EMPTY= # Comment after empty

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (inline_comment)))

================================================================================
Inline comment: Long comment text
================================================================================

KEY=value # This is a very long inline comment that explains what this variable does

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))
    (inline_comment)))

================================================================================
Hash without space: URL fragment (not comment)
================================================================================

URL=http://example.com#anchor

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Hash without space: Hex color (not comment)
================================================================================

COLOR=#333

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Hash without space: Full hex color (not comment)
================================================================================

COLOR=#ff5733

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Hash without space: Multiple hashes (not comment)
================================================================================

KEY=a#b#c#d

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Hash in double quotes: Always literal (not comment)
================================================================================

TEXT="value #not a comment"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Hash in single quotes: Always literal (not comment)
================================================================================

TEXT='value #not a comment'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Hash in double quotes with whitespace: Still literal
================================================================================

TEXT="value  #  still not a comment  "

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Comment section header pattern
================================================================================

# ============================================
# Database Configuration
# ============================================

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content))
  (comment
    (comment_content))
  (comment
    (comment_content)))

================================================================================
Comment with TODO pattern
================================================================================

# TODO: Update this value before deploy

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))

================================================================================
Comment with NOTE pattern
================================================================================

# NOTE: This value is required

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_content)))
