test/corpus/keys.txt
================================================================================
Key: Simple uppercase
================================================================================

KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Lowercase
================================================================================

database_url=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Mixed case
================================================================================

ApiKey=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Starting with underscore
================================================================================

_PRIVATE=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Underscore only
================================================================================

_=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Multiple underscores
================================================================================

__DOUBLE__UNDERSCORE__=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: With numbers in middle
================================================================================

CONFIG123ABC=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Numbers at end
================================================================================

VERSION_2=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Underscore then numbers
================================================================================

_123=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Long key name
================================================================================

VERY_LONG_ENVIRONMENT_VARIABLE_NAME_THAT_GOES_ON_AND_ON_AND_ON=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Single character A
================================================================================

A=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Single character Z
================================================================================

Z=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Single character a
================================================================================

a=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Single character z
================================================================================

z=1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Multiple keys ordered
================================================================================

ALPHA=1
BETA=2
GAMMA=3

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Duplicate keys (EDF: last wins, parser sees both)
================================================================================

KEY=first
KEY=second
KEY=third

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Leading whitespace (space) stripped
================================================================================

  KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Leading whitespace (tab) stripped
================================================================================

	KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Leading whitespace (mixed) stripped
================================================================================

  	  KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Empty value
================================================================================

EMPTY=

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)))

================================================================================
Key: With empty quoted value
================================================================================

EMPTY=""

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string)))

================================================================================
Key: Common patterns AWS style
================================================================================

AWS_ACCESS_KEY_ID=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Common patterns React style
================================================================================

REACT_APP_API_URL=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Common patterns Node style
================================================================================

NODE_ENV=production

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Key: Case sensitivity preserved
================================================================================

lowercase=1
UPPERCASE=2
MixedCase=3

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content)))
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))
